[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/HealthBar.gd" id="1_healthbar"]

[node name="HealthBar" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 220.0
offset_bottom = -40.0
script = ExtResource("1_healthbar")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="HealthFill" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
color = Color(0, 1, 0, 1)

[node name="HealthLabel" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -11.0
offset_right = 30.0
offset_bottom = 11.0
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1